# real-time-conversational-ai-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py  models.py  store.py
tests/: test_smoke.py
